--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
     <footer class="site-footer">
         <div class="container">
             <p>&copy; 2024 Old Money. All rights reserved.</p>
+            <h3>the website is created by : <h2>ABDESSAMAD BOUDERQA</h2></h3>
         </div>
     </footer>
 </body>
 </html>
+
